--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@yaireo/ui-range": "^2.1.15",
     "axios": "^0.21.1",
     "bs-webapi": "^0.19.0",
+    "classnames": "^2.3.1",
     "clsx": "^1.1.1",
     "cross-env": "^7.0.3",
     "date-fns": "^2.16.1",
@@ -68,6 +69,7 @@
     "i18next": "^20.3.1",
     "i18next-browser-languagedetector": "^6.1.1",
     "libphonenumber-js": "^1.9.19",
+    "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
     "lodash.get": "^4.4.2",
     "lodash.isempty": "^4.4.0",
@@ -166,7 +168,7 @@
     "eslint-plugin-promise": "^5.2.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "gentype": "^4.1.0",
+    "gentype": "^4.4.0",
     "http-server": "^0.12.3",
     "husky": "^6.0.0",
     "jest": "26.6.0",
